--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
+    "native-base": "^2.13.12",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.3.2"
   },
   "devDependencies": {
