--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "native-base": "^2.13.12",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-draggable-flatlist": "^2.3.4",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
